--- a/dot_config/hypr/monitors.conf.tmpl
+++ b/dot_config/hypr/monitors.conf.tmpl
@@ -3,21 +3,16 @@
 # Format: monitor = [port], resolution, position, scale
 
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
+
+{{- if eq .chezmoi.hostname "ideahost" }}
 env = GDK_SCALE,1.75
 monitor = eDP-1,preferred,auto,1.6
+{{- end }}
 
-# Good compromise for 27" or 32" 4K monitors (but fractional!)
-# env = GDK_SCALE,3.75
+{{- if eq .chezmoi.hostname "VAN-PC" }}
+env = GDK_SCALE,1.75
 monitor = DP-1,2560x1440@60,0x0,1.333334
 monitor = HDMI-A-1,3840x2160@60,1920x-50,1.6
-
-# Straight 1x setup for low-resolution displays like 1080p or 1440p
-# env = GDK_SCALE,1
-# monitor=,preferred,auto,1
-
-# Example for Framework 13 w/ 6K XDR Apple display
-# monitor = DP-5, 6016x3384@60, auto, 2
-# monitor = eDP-1, 2880x1920@120, auto, 2
 
 workspace = 1, monitor:DP-1
 workspace = 2, monitor:DP-1
@@ -26,3 +21,5 @@ workspace = 4, monitor:HDMI-A-1
 workspace = 5, monitor:HDMI-A-1
 workspace = 6, monitor:HDMI-A-1
 workspace = 7, monitor:HDMI-A-1
+{{- end }}
+
