correct pc hostname

--- a/dot_config/hypr/monitors.conf.tmpl
+++ b/dot_config/hypr/monitors.conf.tmpl
@@ -9,7 +9,7 @@ env = GDK_SCALE,1.75
 monitor = eDP-1,preferred,auto,1.6
 {{- end }}
 
-{{- if eq .chezmoi.hostname "VAN-PC" }}
+{{- if eq .chezmoi.hostname "vanpc" }}
 env = GDK_SCALE,1.75
 monitor = DP-1,2560x1440@60,0x0,1.333334
 monitor = HDMI-A-1,3840x2160@60,1920x-50,1.6
