refactor(hypr): add bindings for workspace 8 and update window rules
refactor(hyprland.conf): update window rule for floating workspaces

--- a/dot_config/hypr/monitors.conf.tmpl
+++ b/dot_config/hypr/monitors.conf.tmpl
@@ -21,5 +21,6 @@ workspace = 4, monitor:HDMI-A-1
 workspace = 5, monitor:HDMI-A-1
 workspace = 6, monitor:HDMI-A-1
 workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
 {{- end }}
 
