--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'CaskaydiaMono Nerd Font';
+  font-family: "0xProto Nerd Font";
   font-size: 12px;
 }
 
@@ -24,6 +24,11 @@
   padding: 0 6px;
   margin: 0 1.5px;
   min-width: 9px;
+}
+
+#workspaces button.active {
+  font-weight: bold;
+  border-bottom: 3px solid @foreground;
 }
 
 #workspaces button.empty {
